re-organized files into folders and changed background to biggie smalls

--- a/styleSheets/cipher.css
+++ b/styleSheets/cipher.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("Images/city.jpg");
+	background-image: url("biggie.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 }
