--- a/styleSheets/cipher.css
+++ b/styleSheets/cipher.css
@@ -1,7 +1,8 @@
 body {
 	background-image: url("Images/biggie.jpg");
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: 100%;
+	margin: 0 auto; 
 	
 }
 
@@ -14,6 +15,7 @@ iframe {
 }
 #topicBtn{
 	font-size:32px;
+	margin-left: 15px; 
 }
 
 .mainText{
@@ -26,10 +28,16 @@ iframe {
 	font-weight: 750;
 	font-size: 84px;
 	margin: auto;
-	width: 400px;
-	height: 300px;
+	/* width: 400px; */
+	/* height: 650px; */
 	text-align: center;
 	text-shadow: 4px 2px 5px black;
+}
+
+.word-box {
+	width: 400px;
+	height: 650px;
+	margin: auto;
 }
 
 #time {
@@ -43,6 +51,7 @@ iframe {
 
 h1 {
 	display: flex;
+	margin-left:10px;
 	justify-content: row wrap;
 	font-family: 'Lato', sans-serif;
 	font-weight: 900;
