--- a/styleSheets/boxes.css
+++ b/styleSheets/boxes.css
@@ -1,6 +1,7 @@
 #generator {
   /*background-color: */
   justify-content: center;
+  margin-top:-160px; 
   
 }
 
@@ -10,7 +11,7 @@
   position: absolute;
   font-family: 'Lato', sans-serif;
   width:350px;
-  margin-left: 10px;
+  margin-left: 80px;
   border-radius: 10px;
   font-size: 28px;
 }
@@ -48,6 +49,5 @@
 
 #sound-box {
   display: flex;
-  align-items: baseline;
   justify-content: center;
 }
