added some more backgrounds

--- a/styleSheets/cipher.css
+++ b/styleSheets/cipher.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("Images/kanye.jpg");
+	background-image: url("Images/biggie.jpg");
 	background-repeat: no-repeat;
 	background-size: 100%;
 	margin: 0 auto; 
