--- a/styleSheets/boxes.css
+++ b/styleSheets/boxes.css
@@ -10,30 +10,22 @@
   
 }
 
-#topics-box{
-  display: none;
-  background-color: rgba(253, 253, 253, 0.5);
-  position: absolute;
-  font-family: 'Lato', sans-serif;
-  width:350px;
-  margin-left: 100px;
-  border-radius: 10px;
-  font-size: 28px;
-}
-
 #topics-box li{
   list-style: none; 
   cursor: pointer;
-  
+  font-family: 'Lato', sans-serif;
+}
+
+#musicBox li{ 
+    cursor: pointer;
+    font-family: 'Lato', sans-serif;
 }
 
 #cipher-box {
   display: flex;
   flex-direction: column;
   align-content: center;
-  /*justify-content: center;*/
   margin-bottom: 50px;
-  /*flex-flow: wrap; */
   height: 300px;
 }
 
@@ -53,8 +45,7 @@
   margin: -25px auto;
 }
 
-#sound-box {
-  display: flex;
-  justify-content: center;
-  margin-top: 180px; 
+#musicBox {
+  margin-top:6%;
+  width: 45%;
 }
