--- a/styleSheets/boxes.css
+++ b/styleSheets/boxes.css
@@ -7,18 +7,12 @@
   /* background-color: rgba(253, 253, 253, 0.5); */
   border-radius: 10px;
   width: 50%; 
-  
 }
 
 #topics-box li{
   list-style: none; 
   cursor: pointer;
   font-family: 'Lato', sans-serif;
-}
-
-#musicBox li{ 
-    cursor: pointer;
-    font-family: 'Lato', sans-serif;
 }
 
 #cipher-box {
@@ -49,3 +43,13 @@
   margin-top:6%;
   width: 45%;
 }
+
+#musicControls{
+  display:flex; 
+  justify-content: space-around;
+  font-size:145%;
+  list-style: none; 
+  cursor: pointer;
+  font-family: 'Lato', sans-serif;
+}
+
